# Clean-Architecture-Python

./: README.md  main.py  pyproject.toml
src/application/app/: app.py
src/application/common/shared/: provider.py
src/application/common/shared/config/: config.py
src/application/common/shared/database/sqlalchemy/: mixins.py  sqlalchemy_database.py
src/application/common/shared/exception/: base.py
src/application/common/shared/pagination/: base_pagination.py
src/application/modules/user/: provider.py
src/application/modules/user/constants/: constants.py
src/application/modules/user/domain/entities/: user.py
src/application/modules/user/domain/value_objects/: email.py  password.py  user_id.py  username.py
src/application/modules/user/dto/requests/: create_user_request.py  get_users_request.py
src/application/modules/user/dto/responses/: create_user_response.py
src/application/modules/user/exceptions/: exceptions.py
src/application/modules/user/infrastructure/events/: user_created_event.py
src/application/modules/user/infrastructure/models/: user.py
src/application/modules/user/infrastructure/repository/: user_repository.py
src/application/modules/user/infrastructure/services/: user_service.py
src/application/modules/user/use-cases/: create_user_use_case.py
src/application/modules/user/use_cases/: create_user_use_case.py
src/common/shared/: provider.py
src/common/shared/auth/infrastructure/hash/: bcrypt_hash.py
src/common/shared/config/: config.py
src/common/shared/database/sqlalchemy/: mixins.py  sqlalchemy_database.py
(+17 files in other folders)
