[project]
name = "cleana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.13.0",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "black>=26.3.1",
    "dishka>=1.9.1",
    "fastapi[all]>=0.135.1",
    "faststream[kafka]>=0.6.7",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "pyjwt>=2.12.1",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
]
